--- a/MicroFocus-ROI-app/src/index.html
+++ b/MicroFocus-ROI-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MicroFocusROIApp</title>
+  <title>MicroFocus ROI</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
