--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ROI Calculator | Micro Focus</title>
-  <base href="/microfocus_roi/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i" rel="stylesheet">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
- <!--  <script src="node_modules/chart.js/src/chart.js"></script> --> <!-- Documentation said I needed this, but I'm doubting it.  -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body class="mf-app">
-  <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>ROI Calculator | Micro Focus</title><base href="/microfocus_roi/"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i" rel="stylesheet"><script defer="defer" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.a356efa9ba6f06061a4a.bundle.css" rel="stylesheet"/></head><body class="mf-app"><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.1f5798266893de35026b.bundle.js"></script><script type="text/javascript" src="main.7de1842e91a04b02e94e.bundle.js"></script></body></html>
